Updated language catalogs. Modified debate data models and formsets

--- a/src/e_cidadania/apps/debate/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/debate/locale/gl_ES/LC_MESSAGES/django.po
@@ -2,23 +2,23 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-10-10 09:34+0200\n"
-"PO-Revision-Date: 2011-09-22 10:47\n"
+"POT-Creation-Date: 2011-11-14 18:28+0100\n"
+"PO-Revision-Date: 2011-11-15 12:09\n"
 "Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 "X-Translated-Using: django-rosetta 0.6.0\n"
 
-#: models.py:41 models.py:69
+#: models.py:41 models.py:83
 msgid "Title"
 msgstr "Titulo"
 
@@ -28,75 +28,107 @@ msgstr "Descrición"
 
 #: models.py:43
 msgid "Scope"
-msgstr ""
+msgstr "Alcance"
 
-#: models.py:45
+#: models.py:44
 msgid "X Values"
-msgstr ""
+msgstr "X Valores"
 
-#: models.py:46
-msgid "Y Values"
-msgstr ""
+#: models.py:48
+msgid "Last update"
+msgstr "Última actualización"
 
-#: models.py:68
+#: models.py:64
+msgid "Criteria"
+msgstr "Criterios"
+
+#: models.py:67
+msgid "Sortables"
+msgstr "Sortables"
+
+#: models.py:82
 msgid "Note div ID"
-msgstr ""
+msgstr "Nota div ID"
 
-#: models.py:70
+#: models.py:84
 msgid "Message"
 msgstr "Mensaxe"
 
-#: models.py:71
+#: models.py:85
 msgid "Parent TD or DIV"
-msgstr ""
+msgstr "Pai TD ou DIV"
 
 #: templates/debate/debate_add.html:4 templates/debate/debate_board.html:4
-#, fuzzy
 msgid "Create new debate"
-msgstr "Crear novo espazo"
+msgstr "Crear novo debate"
 
-#: templates/debate/debate_add.html:16 templates/debate/debate_board.html:16
-#, fuzzy
+#: templates/debate/debate_add.html:22 templates/debate/debate_board.html:16
 msgid "Create a new debate"
-msgstr "Crear un novo espazo"
+msgstr "Crear un novo debate"
 
-#: templates/debate/debate_add.html:23 templates/debate/debate_board.html:23
+#: templates/debate/debate_add.html:31 templates/debate/debate_board.html:23
 msgid "Remove column"
-msgstr ""
+msgstr "Eliminar columna"
 
-#: templates/debate/debate_add.html:24 templates/debate/debate_board.html:24
+#: templates/debate/debate_add.html:32 templates/debate/debate_board.html:24
 msgid "Add column"
-msgstr ""
+msgstr "Engadir columna"
 
-#: templates/debate/debate_add.html:48 templates/debate/debate_board.html:56
+#: templates/debate/debate_add.html:59 templates/debate/debate_board.html:56
 msgid "Remove row"
-msgstr ""
+msgstr "Eliminar fila"
 
-#: templates/debate/debate_add.html:49 templates/debate/debate_board.html:57
+#: templates/debate/debate_add.html:60 templates/debate/debate_board.html:57
 msgid "Add row"
-msgstr ""
+msgstr "Engadir fila"
 
-#: templates/debate/debate_add.html:52 templates/debate/debate_board.html:66
+#: templates/debate/debate_add.html:63 templates/debate/debate_board.html:66
 msgid "Other debate data"
-msgstr ""
+msgstr "Outros datos de debate"
 
-#: templates/debate/debate_add.html:95 templates/debate/debate_board.html:109
+#: templates/debate/debate_add.html:123 templates/debate/debate_board.html:109
 msgid "Save"
-msgstr ""
+msgstr "Gardar"
 
-#: templates/debate/debate_add.html:96 templates/debate/debate_board.html:110
+#: templates/debate/debate_add.html:124 templates/debate/debate_board.html:110
 msgid "Cancel"
-msgstr ""
+msgstr "Cancelar"
 
-#: templates/debate/debate_board.html:61
-#, fuzzy
+#: templates/debate/debate_board.html:61 templates/debate/debate_view.html:62
 msgid "Add new note"
-msgstr "Engadir nova fase"
+msgstr "Engadir nova nota"
 
 #: templates/debate/debate_board.html:62
-#, fuzzy
 msgid "Add phase"
 msgstr "Engadir nova fase"
+
+#: templates/debate/debate_list.html:4 templates/debate/debate_list.html:12
+msgid "Debates in "
+msgstr "Debates en"
+
+#: templates/debate/debate_list.html:21
+msgid "There are no debates."
+msgstr "Non hai debates"
+
+#: templates/debate/debate_list.html:25
+msgid "Go back"
+msgstr "Volver"
+
+#: templates/debate/debate_list.html:32
+msgid "previous"
+msgstr "anterior"
+
+#: templates/debate/debate_list.html:35
+msgid "of"
+msgstr "de"
+
+#: templates/debate/debate_list.html:38
+msgid "next"
+msgstr "seguinte"
+
+#: templates/debate/debate_view.html:5 templates/debate/debate_view.html:17
+msgid "View debate "
+msgstr "Ver debate"
 
 #~ msgid "Objectives"
 #~ msgstr "Obxectivos"
