--- a/src/e_cidadania/apps/news/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/news/locale/gl_ES/LC_MESSAGES/django.po
@@ -2,20 +2,20 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-14 18:28+0100\n"
+"POT-Creation-Date: 2011-12-13 01:25+0100\n"
 "PO-Revision-Date: 2011-11-15 12:27\n"
 "Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: admin.py:38
@@ -118,11 +118,10 @@ msgstr "Publicar no índice"
 
 #: templates/news/post_add.html:123
 msgid ""
-"If you mark this, the post will appear in the spaces index page AND in "
-"the main index."
+"If you mark this, the post will appear in the spaces index page AND in the "
+"main index."
 msgstr ""
-"Se marcas isto, a entrada aparecerá no índice do espazo E no índice "
-"global."
+"Se marcas isto, a entrada aparecerá no índice do espazo E no índice global."
 
 #: templates/news/post_confirm_delete.html:4
 msgid "Delete news"
@@ -134,8 +133,7 @@ msgstr "Eliminar mensaxe"
 
 #: templates/news/post_confirm_delete.html:31
 msgid ""
-"Are you sure you want to delete this post? This action cannot be "
-"undone."
+"Are you sure you want to delete this post? This action cannot be undone."
 msgstr ""
 "Estás seguro de querer eliminar esta entrada? Esta acción non se pode "
 "desfacer."
