--- a/src/e_cidadania/apps/proposals/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/proposals/locale/gl_ES/LC_MESSAGES/django.po
@@ -2,20 +2,20 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-14 18:28+0100\n"
+"POT-Creation-Date: 2011-12-13 01:25+0100\n"
 "PO-Revision-Date: 2011-11-15 12:33\n"
 "Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: admin.py:45
@@ -106,11 +106,11 @@ msgstr "Admins/moderadores lede isto"
 
 #: templates/proposals/proposal_add.html:122
 msgid ""
-"There are a lot more options in the proposals but they will appear only"
-" when you edit the proposal."
+"There are a lot more options in the proposals but they will appear only when "
+"you edit the proposal."
 msgstr ""
-"Hai moitas máis opcións nas propostas das que se mostran, pero "
-"aparecerán sólo cando se edite a proposta."
+"Hai moitas máis opcións nas propostas das que se mostran, pero aparecerán "
+"sólo cando se edite a proposta."
 
 #: templates/proposals/proposal_add.html:124
 msgid "How to add new proposals"
@@ -122,11 +122,11 @@ msgstr "Título resumindo a proposta, sé conciso (50 caracteres)"
 
 #: templates/proposals/proposal_add.html:127
 msgid ""
-"Describe here your proposal with detail. You can add images or any "
-"other content."
+"Describe here your proposal with detail. You can add images or any other "
+"content."
 msgstr ""
-"Describe a túa proposta con detalle. Podes engadir imaxes ou outro "
-"tipo de contido."
+"Describe a túa proposta con detalle. Podes engadir imaxes ou outro tipo de "
+"contido."
 
 #: templates/proposals/proposal_add.html:128
 msgid "Latitude/Longitude"
@@ -142,8 +142,8 @@ msgstr "Etiquetas"
 
 #: templates/proposals/proposal_add.html:129
 msgid ""
-"Relevant tags for the proposal, p.e. where the proposal is localted, "
-"what is related to it, etc."
+"Relevant tags for the proposal, p.e. where the proposal is localted, what is "
+"related to it, etc."
 msgstr ""
 "Etiquetas relevantes para a proposta, por exemplo, onde está, cousas "
 "relacionadas, etc."
@@ -155,8 +155,7 @@ msgstr "Eliminar proposta"
 
 #: templates/proposals/proposal_confirm_delete.html:18
 msgid ""
-"Are you sure you want to delete this proposal? This action cannot be "
-"undone."
+"Are you sure you want to delete this proposal? This action cannot be undone."
 msgstr ""
 "Está seguro de querer eliminar esta proposta? Esta acción non se pode "
 "desfacer."
